--- a/mystyle.css
+++ b/mystyle.css
@@ -1,6 +1,6 @@
 ﻿body
 {
-background:url(http://www.boomdrawsound.com/wp-content/uploads/2011/11/Background_Grunge_By_Whatsamahoozit_1440X900.png);
+background:url(https://habrastorage.org/files/161/60c/b34/16160cb34a7342ae84ffa48a39b8a298.png);
 }
 li{
 	cursor:pointer;
