--- a/mystyle.css
+++ b/mystyle.css
@@ -1,6 +1,6 @@
 ﻿body
 {
-background:url(https://habrastorage.org/files/161/60c/b34/16160cb34a7342ae84ffa48a39b8a298.png);
+background:urlhttp://editlw.ru/images/news/5_background_video_footage.jpg);
 }
 li{
 	cursor:pointer;
