--- a/mystyle.css
+++ b/mystyle.css
@@ -1,6 +1,6 @@
 ﻿body
 {
-background:url(http://editlw.ru/images/news/5_background_video_footage.jpg);
+background:url(http://clipart-db.ru/file_content/rastr/background_050.jpg);
 }
 li{
 	cursor:pointer;
