--- a/mystyle.css
+++ b/mystyle.css
@@ -1,6 +1,6 @@
 ﻿body
 {
-background:url(http://www.boomdrawsound.com/wp-content/uploads/2011/11/Background_Grunge_By_Whatsamahoozit_1440X900.png);
+background:url(https://akphoto1.ask.fm/456/830/043/910003006-1qmanct-ghnp46sfomqp9lk/original/FG8pQNIP5M.jpg);
 }
 li{
 	cursor:pointer;
