--- a/mystyle.css
+++ b/mystyle.css
@@ -1,6 +1,6 @@
 ﻿body
 {
-background:url(https://akphoto1.ask.fm/456/830/043/910003006-1qmanct-ghnp46sfomqp9lk/original/FG8pQNIP5M.jpg);
+background:url();
 }
 li{
 	cursor:pointer;
