--- a/mystyle.css
+++ b/mystyle.css
@@ -1,6 +1,6 @@
 ﻿body
 {
-background:url(http://365psd.ru/images/backgrounds/wood-texture-014.jpg);
+background:design.jpg;
 }
 li{
 	cursor:pointer;
