--- a/mystyle.css
+++ b/mystyle.css
@@ -1,120 +1,56 @@
-﻿body
+﻿.menu
 {
-background:design.jpg;
+	background:#040010;
+	width:100%;
+	height:45;
+	font-family:algerian;
+	color:#a4e800;
 }
-li{
-	cursor:pointer;
-	color:navy;
-	font-size:18px;
+.menu a
+{
+   display:block; 
+   background:#717b7b; 
+   height:26px; 
+   width:10%; 
+   padding-top:12px; 
+   margin:3px 2px 4px 2px; 
+   float:left;
+   
+   text-align:center; 
+   text-decoration:none; 
+   color:#a4e800; 
+   letter-spacing:3px; 
+   font-size:13pt; 
+   font-family:algerian;
 }
-li:hover{
-	color:red;
+.menu a:hover
+{
+   background:#c7cfd7;
+   color:#cc0000;
 }
-.NAME{
-	color:#5cef4d;
-	font-family:RUSBoycott;
-	font-size:30px;
-	background:;
+#a123
+{
+   background:#c7cfd7;
+   color:#cc0000;
 }
-.rect{
-	width:25px;
-	height:25px;
-	background:blue;
-	border-radius:20px;
-}
-#img1{
-	cursor:pointer;
-}
-.rect2{
-	width:25px;
-	height:25px;
-	background:green;
-	border-radius:20px;
-}
-tr{
-	
-	color:#2bd66b;
-}
-
-
-
-
-.a1{
-	width:50%;
-	margin:2px 0px 2px 0px;
-	padding:2px 0px 2px 0px;
-	background:#3d3d3d;
-	color:#fff;
-	padding:5px;
+.text a
+{
 	display:block;
+	border:1px outset black;
+	height:30%; 
+	width:30%; 
+	padding-top:12px; 
+	margin:0px 20px 20px 20px; 
+	float:left;
 	
+	text-align:center; 
+	text-decoration:none; 
+	color:#a4e800; 
+	letter-spacing:3px; 
+	font-size:10pt; 
+	font-family:algerian;
 }
-div{
-	margin:0px 0px 2px 5px;
-	padding:0px 0px 2px 5px;
+.text a:hover
+{
+   color:#cc0000;
 }
-
-.ul{
-	margin:0;
-	padding:0;
-
-}
-a{
-	
-	background:#3d3d3d;
-	color:#fff;
-	padding:2px;
-	
-}
-a:hover{
-	background:#666;
-	padding:5px 0 5px 15px;
-	list-style:none;
-}
-.menu li:first-child a,
-.menu li .menu__drop li:first-child a{
-	border:3px 3px 0 0;
-}
-.menu li:last-child a,
-.menu li .menu__drop li:last-child a{
-	border:0 0 3px 3px;
-	border-bottom:0;
-}
-.menu__list{
-	position:relative;
-}
-.menu__drop{
-	list-style:none;
-	position:absolute;
-	width:50%;
-	left:50%;
-	top:-9999em;
-	opacity:0;
-	border-left:5px solid transparent;
-	transition:0.5s opacity;
-}
-.menu__list:hover .menu__drop{
-	opacity:1;
-	top:0;
-}
-#regusers{
-	width:16%;
-	position:absolute;
-	top:0%;
-	left:81%;
-	z-index:50;
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
