--- a/mystyle.css
+++ b/mystyle.css
@@ -54,3 +54,22 @@
 {
    color:#cc0000;
 }
+.text_music 
+{
+	display:block;
+	border:1px outset black;
+	height:65%; 
+	width:32%; 
+	padding-top:12px; 
+	margin:0px 18px 0px 0px; 
+	float:left;
+	
+	text-align:center; 
+	text-decoration:none;  
+	letter-spacing:3px; 
+	font-size:7pt; 
+}
+.text_music details:hover
+{
+   color:#cc0000;
+}
